--- a/about.html
+++ b/about.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-<title>About youtube-dl</title>
+<title>About nextdl</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
 
 <table class="heading"><tr>
-	<td class="title"><a href="index.html">youtube-dl</a></td>
+	<td class="title"><a href="index.html">nextdl</a></td>
 	<td class="subtitle">About the program</td>
 </tr></table>
 
 <h1>What is it?</h1>
 
-<p><em>youtube-dl</em> is a command-line program to download videos from YouTube.com and a few <a href="supportedsites.html" style="color: blue; text-decoration: underline;">more sites</a>. It requires the <a href="http://www.python.org/">Python interpreter</a>, version 2.6, 2.7, or 3.2+, and it is not platform specific. It should work in your Unix box, in Windows or in Mac OS X. It is released to the public domain, which means you can modify it, redistribute it or use it however you like. The project is currently being developed at <a href="https://github.com/ytdl-org/youtube-dl/"><strong>GitHub</strong></a>.</p>
+<p><em>nextdl</em> is a command-line program to download videos from YouTube.com and a few <a href="supportedsites.html" style="color: blue; text-decoration: underline;">more sites</a>. It requires the <a href="http://www.python.org/">Python interpreter</a>, version 2.6, 2.7, or 3.2+, and it is not platform specific. It should work in your Unix box, in Windows or in Mac OS X. It is released to the public domain, which means you can modify it, redistribute it or use it however you like. The project is currently being developed at <a href="https://github.com/nextdl/nextdl/"><strong>GitHub</strong></a>.</p>
 
 <h1>Authors</h1>
 
@@ -37,14 +37,14 @@
 <li><a href="https://github.com/pulpe">pulpe</a>: core developer.</li>
 </ul>
 
-<p>Many <a href="https://github.com/ytdl-org/youtube-dl/blob/master/AUTHORS">other people</a> contributing patches, code, ideas and kind messages. <a href="https://github.com/ytdl-org/youtube-dl/graphs/contributors">Too many</a> to be listed here. You know who you are. Thank you very much.</p>
+<p>Many <a href="https://github.com/nextdl/nextdl/blob/master/AUTHORS">other people</a> contributing patches, code, ideas and kind messages. <a href="https://github.com/nextdl/nextdl/graphs/contributors">Too many</a> to be listed here. You know who you are. Thank you very much.</p>
 
 <div class="note">
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">
 <img alt="Creative Commons License" style="border-width:0"
 src="https://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><br />
 Copyright © 2006-2011 Ricardo Garcia Gonzalez<br />
-Copyright © 2011-2021 youtube-dl developers
+Copyright © 2021 nextdl
 </div>
 </body>
 </html>
