--- a/index.html
+++ b/index.html
@@ -2,36 +2,36 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-<title>youtube-dl</title>
+<title>nextdl</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
-<link rel="alternate" type="application/atom+xml" title="youtube-dl releases" href="update/releases.atom" />
+<link rel="alternate" type="application/atom+xml" title="nextdl releases" href="update/releases.atom" />
 </head>
 <body>
 
 <table class="heading"><tr>
-	<td class="title"><a href="index.html">youtube-dl</a></td>
+	<td class="title"><a href="index.html">nextdl</a></td>
 	<td class="subtitle">Download videos from YouTube
 		(and <a href="supportedsites.html" style="color: blue; text-decoration: underline;">more sites</a>)</td>
 </tr></table>
 
-<p><em>youtube-dl</em> is a command-line program to download videos from YouTube.com and a few <a href="supportedsites.html" style="color: blue; text-decoration: underline;">more sites</a>. It requires the <a href="http://www.python.org/">Python interpreter</a> (2.6, 2.7, or 3.2+), and it is not platform specific. We also provide a <a href="https://yt-dl.org/latest/youtube-dl.exe">Windows executable</a> that includes Python. youtube-dl should work in your Unix box, in Windows or in Mac OS X. It is released to the public domain, which means you can modify it, redistribute it or use it however you like.</p>
+<p><em>nextdl</em> is a command-line program to download videos from YouTube.com and a few <a href="supportedsites.html" style="color: blue; text-decoration: underline;">more sites</a>. It requires the <a href="http://www.python.org/">Python interpreter</a> (2.6, 2.7, or 3.2+), and it is not platform specific. We also provide a <a href="https://nextdl.org/latest/nextdl.exe">Windows executable</a> that includes Python. nextdl should work in your Unix box, in Windows or in Mac OS X. It is released to the public domain, which means you can modify it, redistribute it or use it however you like.</p>
 
 <table border="0" id="rgb">
-	<tr><td><a class="button" id="r" href="https://github.com/ytdl-org/youtube-dl/blob/master/README.md#readme">Documentation</a></td></tr>
+	<tr><td><a class="button" id="r" href="https://github.com/nextdl/nextdl/blob/master/README.md#readme">Documentation</a></td></tr>
 	<tr><td><a class="button" id="g" href="download.html">Download</a></td></tr>
-	<tr><td><a class="button" id="main-support" href="https://github.com/ytdl-org/youtube-dl/issues/new/choose">Support</a></td></tr>
-	<tr><td><a class="button" id="y" href="https://github.com/ytdl-org/youtube-dl/">Develop</a></td></tr>
+	<tr><td><a class="button" id="main-support" href="https://github.com/nextdl/nextdl/issues/new/choose">Support</a></td></tr>
+	<tr><td><a class="button" id="y" href="https://github.com/nextdl/nextdl/">Develop</a></td></tr>
 	<tr><td><a class="button" id="b" href="about.html">About</a></td></tr>
 </table>
 
-<p>You can also contact us on the irc channel <a href="irc://chat.freenode.net/#youtube-dl">#youtube-dl</a> (<a href="http://webchat.freenode.net/?randomnick=1&amp;channels=youtube-dl">webchat</a>) on freenode.</p>
+<p>You can also contact us on the irc channel <a href="irc://chat.freenode.net/#nextdl">#nextdl</a> (<a href="http://webchat.freenode.net/?randomnick=1&amp;channels=nextdl">webchat</a>) on freenode.</p>
 
 <div class="note">
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">
 <img alt="Creative Commons License" style="border-width:0"
 src="https://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><br />
 Copyright © 2006-2011 Ricardo Garcia Gonzalez<br />
-Copyright © 2011-2021 youtube-dl developers
+Copyright © 2011-2021 nextdl developers
 </div>
 </body>
 </html>
